Fix table missing borders after changing dashboard styles

--- a/styles/pages/_dashboard.scss
+++ b/styles/pages/_dashboard.scss
@@ -1,27 +1,6 @@
 .dashboard-container {
   width: 100%;
-  table {
-    width: 100%;
-    border: 1px solid #000;
-  }
-
-  th, td {
-    width: 25%;
-    text-align: left;
-    vertical-align: top;
-    border: 1px solid #000;
-    border-collapse: collapse;
-    padding: 0.3em;
-    caption-side: bottom;
-  }
-
-  caption {
-    padding: 0.3em;
-  }
-
-  b {
-      font-weight: bold;
-  }
+  
 
   #left-half{
     width:30%;
